<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.edit.EditFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/habit_edit_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edHabitName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="0dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/habit_name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/habit_desc_hint"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Spinner
                android:id="@+id/spPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minHeight="48dp" />

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:text="@string/type"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbGood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/type_good"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbBad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_bad"
                    android:textSize="18sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/edHabitCnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="0dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/habit_cnt_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edHabitPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginBottom="0dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/habit_period_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13sp"
                    android:text="@string/color"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/color"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="8dp"
                    android:background="#00FFFF" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <HorizontalScrollView
                    android:id="@+id/colorsScroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/gradLinLay"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/grad_bg"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/square1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="18.75dp"
                            android:background="@drawable/square"
                            android:transitionName="#00FFFF" />

                        <View
                            android:id="@+id/square2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="18.75dp"
                            android:background="@drawable/square"
                            android:transitionName="#000000" />

                        <View
                            android:id="@+id/square3"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:background="@drawable/square"
                            android:transitionName="#0000FF" />

                        <View
                            android:id="@+id/square4"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="0"
                            android:background="@drawable/square"
                            android:transitionName="#FF00FF" />

                        <View
                            android:id="@+id/square5"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#808080" />

                        <View
                            android:id="@+id/square6"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#008000" />

                        <View
                            android:id="@+id/square7"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#00FF00" />

                        <View
                            android:id="@+id/square8"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#800000" />

                        <View
                            android:id="@+id/square9"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#000080" />

                        <View
                            android:id="@+id/square10"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#808000" />

                        <View
                            android:id="@+id/square11"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#800080" />

                        <View
                            android:id="@+id/square12"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#FF0000" />

                        <View
                            android:id="@+id/square13"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#C0C0C0" />

                        <View
                            android:id="@+id/square14"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#008080" />

                        <View
                            android:id="@+id/square15"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#FFFFFF" />

                        <View
                            android:id="@+id/square16"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="18.75dp"
                            android:layout_weight="1"
                            android:background="@drawable/square"
                            android:transitionName="#FFFF00" />

                    </LinearLayout>
                </HorizontalScrollView>
            </ScrollView>

            <RelativeLayout
                android:id="@+id/rlEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@+id/btnCancel"
                    android:minHeight="48dp"
                    android:text="@string/save_text"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/cancel_text"
                    android:visibility="visible" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>